--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="hero-content container">
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
-                    <img src="PASSPHOTO.jpg" alt="YEDELLI SANDEEP">
+                    <img src="/PASSPHOTO.jpg" alt="YEDELLI SANDEEP">
                     <div class="about-text">
                         <p>Versatile professional skilled in C, Java, Python, HTML, CSS, and MySQL. Strong communicator with a focus on team building, possessing an optimistic approach. Committed to ongoing learning, I contribute technical expertise and positive collaboration for successful project. I am seeking an opportunity to enhance my skills at a dynamic, fast growing, result oriented company with a culture of respect, trust and open communication.</p>
                     </div>
