--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="hero-content container">
                 <h2 class="section-title">Education</h2>
                 <div class="timeline">
-                   <div class="timeline-item"><img src="/download__1_-removebg-preview1.png" alt="Anurag University Logo" 
-         style="height: 90px; vertical-align: middle; margin-right: 30px;">
+                   <div class="timeline-item">
+                       <img src="download__1_-removebg-preview1.png" alt="Anurag University Logo" style="height: 90px; vertical-align: middle; margin-right: 30px;">
     <h3>Bachelor of Technology</h3>
     <h4> Anurag School of Engineering | 2026</h4>
     <ul>
