--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
                    <div class="timeline-item">
                        <img src="download__1_-removebg-preview1.png" alt="Anurag University Logo" style="height: 90px; vertical-align: middle; margin-right: 30px;">
     <h3>Bachelor of Technology</h3>
-    <h4> Anurag School of Engineering | 2026</h4>
+    <h4> Anurag School of Engineering , Hyderabad| 2026</h4>
     <ul>
         <li>Specialization in Computer Science and Engineering</li>
         <li>Current GPA: 7.07</li>
     </ul>
 </div>
                     <div class="timeline-item">
-                        <h3>Diplome in Engineering</h3>
-                        <h4>Government Polytechnic College  &nbsp&nbsp&nbsp|&nbsp&nbsp 2020 - 2023</h4>
+                        <h3>Diploma in Engineering</h3>
+                        <h4>Government Polytechnic College , Nalgonda &nbsp&nbsp&nbsp|&nbsp&nbsp 2020 - 2023</h4>
                         <ul>
                             <li>Specialized in Computer Engineering</li>
                             <li>Percentage: 78.8%</li>
@@ -63,7 +63,7 @@
                         </ul>
                     </div>
                     <div class="timeline-item">
-                        <h3>SSC</h3>
+                        <h3>Schooling</h3>
                         <h4>TS T W R S  &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp 2020</h4>
                         <ul>
                             <li>Percentage: 97%</li>
